<resources>
    <string name="app_name">Traveling Salesman</string>
    <!-- Strings used for fragments for navigation -->


    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_maps">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_routes">Routes</string>
    <string name="title_activity_main">Traveling Salesman</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="user_image">User profile image</string>
    <string name="action_logout">Sign Out</string>
    <string name="map_id">9c8d32a61b1efb54</string>
    <string name="add_markers">Add</string>
    <string name="toggle_save">Save</string>
    <string name="clear_markers">Clear(%1$d)</string>
    <string name="clear_markers_empty">Clear</string>

    <string name="save">Save</string>
    <string name="route">Route</string>
    <string name="distance_matrix">Distances</string>
    <string name="search_hint">Search</string>
    <string name="start_trip">Start Trip</string>
    <string name="status">Status</string>
    <string name="action_track">Track Location</string>
    <string name="action_online">Go Online</string>
    <string name="share">Share</string>
    <string name="web_link">Web Link</string>
    <string name="add_node">Add Node</string>
    <string name="get_route">Route</string>
    <string name="clear">Clear</string>
    <string name="dialog_save_route">Save Route?</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="delete">Delete</string>
    <string name="dialog_save_node">Save this place in cloud storage?</string>
    <string name="title_nodes">Spots</string>
    <string name="sign_out_content_desc">Sign out of Firebase backend servers.</string>
    <string name="requests">Requests</string>
</resources>