<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_maps"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/title_maps" />

        <item
            android:id="@+id/navigation_routes"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_routes" />


    </group>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_sign_in"
            android:title="@string/sign_in" />

        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/sign_out" />


    </group>

</menu>